arrange project structure, implement minimal wrapper of python interpreter which collects outputs of designated user program

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@
 LANGUAGE=python
 
 # Type your INTERPRETER or COMPILER name in the terminal. (python, python3, g++, ..etc)
-INTERPRETER=py
+# You can easily find with $ which python or $ which g++
+INTERPRETER=~/opt/anaconda3/bin/python
 COMPILER=
